--- a/Semester.html
+++ b/Semester.html
@@ -82,6 +82,31 @@
 			</div>  
 		  </div>
 		</div>
+		
+		<div class="row">
+		  <div class="small-4 large-4 columns">
+		  	<div class="row" data-equalizer>
+			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
+			        <pre id="c1">  7°</pre>
+			  </div>
+			</div>  
+		  </div>
+		  <div class="small-4 large-4 columns">
+		  	<div class="row" data-equalizer>
+			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
+			        <pre id="c2">  8°</pre>
+			  </div>
+			</div>  
+		  </div>
+		  <div class="small-4 large-4 columns">
+		  	<div class="row" data-equalizer>
+			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
+			        <pre id="c3">  9°</pre>
+			  </div>
+			</div>  
+		  </div>
+		</div>
+
 
 		
 
