Proto with icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/colors.css">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+
   </head>
   <body id="first">
   	<div class="icon-bar five-up" role="navigation">
@@ -15,13 +17,13 @@
 	  </a>
 	 
 	  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Bookmark">
-	    <i class="fi-bookmark">H</i>
+	    <i class="fi-bookmark"><img src="Home.png"></i>
 	  </a>
 	  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Information">
-	    <i class="fi-info">T</i>
+	    <i class="fi-info"><img src="Teachers.png"></i>
 	  </a>
 	  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Mail">
-	    <i class="fi-mail">M</i>
+	    <i class="fi-mail"><img src="Major.png"></i>
 	  </a>
 	  
 	</div>
@@ -33,8 +35,10 @@
 
 	<br>
 	<br>
-	<br>
-	<br>
+	<div class="row">
+ 		 <div class="medium-5  medium-centered columns"><pre id="slo">You're a TEC student? Find your teachers!</pre>
+	</div>
+	<br>	
 	<br>
 
 <div class="row" data-equalizer >
