Proto with all icons

--- a/By Major.html
+++ b/By Major.html
@@ -16,13 +16,13 @@
 		  </a>
 		 
 		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Bookmark">
-		    <i class="fi-bookmark">H</i>
+		    <i class="fi-bookmark"><img src="Home.png"></i>
 		  </a>
 		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Information">
-		    <i class="fi-info">T</i>
+		    <i class="fi-info"><img src="Teachers.png"></i>
 		  </a>
 		  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Mail">
-		    <i class="fi-mail">M</i>
+		    <i class="fi-mail"><img src="Major.png"></i>
 		  </a>
 		  
 		</div>
