--- a/Semester.html
+++ b/Semester.html
@@ -8,6 +8,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/colors.css">
     <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="Home.png" type="image/png">
   </head>
   <body id="semester">
 	  <div class="icon-bar five-up" role="navigation">
@@ -16,7 +17,7 @@
 		  </a>
 		 
 		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Bookmark">
-		    <i class="fi-bookmark">><img src="Home.png"></i>
+		    <i class="fi-bookmark"><img src="Home.png"></i>
 		  </a>
 		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Information">
 		    <i class="fi-info"><img src="Teachers.png"></i>
