--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Bookmark">
 	    <i class="fi-bookmark"><img src="Home.png"></i>
 	  </a>
-	  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Information">
+	  <a href= "Teachers.html" class="item" role="button" tabindex="0" aria-label="Information">
 	    <i class="fi-info"><img src="Teachers.png"></i>
 	  </a>
 	  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Mail">
@@ -44,7 +44,7 @@
 <div class="row" data-equalizer >
   <div class="large-6 columns panel" data-equalizer-watch>
     <h3>By teacher</h3>
-    <p><img src="teacher.jpg"></p>
+    <p><a href = "Teachers.html"><img src="teacher.jpg"></a></p>
   </div>
   <div class="large-6 columns panel" data-equalizer-watch>
     <h3>By major</h3>
