--- a/By Major.html
+++ b/By Major.html
@@ -18,7 +18,7 @@
 		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Bookmark">
 		    <i class="fi-bookmark"><img src="Home.png"></i>
 		  </a>
-		  <a href= "index.html" class="item" role="button" tabindex="0" aria-label="Information">
+		  <a href= "Teachers.html" class="item" role="button" tabindex="0" aria-label="Information">
 		    <i class="fi-info"><img src="Teachers.png"></i>
 		  </a>
 		  <a href= "By Major.html" class="item" role="button" tabindex="0" aria-label="Mail">
