--- a/Semester.html
+++ b/Semester.html
@@ -39,21 +39,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c1">  1°</pre>
+			         <a href="Teachers2.html"><pre id="c1">  1°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c2">  2°</pre>
+			        <a href="Teachers2.html"><pre id="c2">  2°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c3">  3°</pre>
+			        <a href="Teachers2.html"><pre id="c3">  3°</pre></a>
 			  </div>
 			</div>  
 		  </div>
@@ -64,21 +64,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c4">  4°</pre>
+			        <a href="Teachers2.html"><pre id="c4">  4°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c5">  5°</pre>
+			        <a href="Teachers2.html"><pre id="c5">  5°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c6">  6°</pre>
+			        <a href="Teachers2.html"><pre id="c6">  6°</pre></a>
 			  </div>
 			</div>  
 		  </div>
@@ -89,21 +89,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c1">  7°</pre>
+			        <a href="Teachers2.html"><pre id="c1">  7°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c2">  8°</pre>
+			        <a href="Teachers2.html"><pre id="c2">  8°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <pre id="c3">  9°</pre>
+			        <a href="Teachers2.html"><pre id="c3">  9°</pre></a>
 			  </div>
 			</div>  
 		  </div>
