Font, Comments, Dates of Comments, Stars

--- a/By Major.html
+++ b/By Major.html
@@ -8,6 +8,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/colors.css">
     <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
   </head>
   <body id="major">
 	  <div class="icon-bar five-up" role="navigation">
