--- a/Semester.html
+++ b/Semester.html
@@ -8,6 +8,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <link rel="stylesheet" href="css/colors.css">
     <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="Home.png" type="image/png">
   </head>
   <body id="semester">
@@ -39,21 +40,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			         <a href="Teachers2.html"><pre id="c1">  1°</pre></a>
+			         <a href="Teachers2.html"><pre id="c1">   1°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c2">  2°</pre></a>
+			        <a href="Teachers2.html"><pre id="c2">   2°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c3">  3°</pre></a>
+			        <a href="Teachers2.html"><pre id="c3">   3°</pre></a>
 			  </div>
 			</div>  
 		  </div>
@@ -64,21 +65,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c4">  4°</pre></a>
+			        <a href="Teachers2.html"><pre id="c4">   4°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c5">  5°</pre></a>
+			        <a href="Teachers2.html"><pre id="c5">   5°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c6">  6°</pre></a>
+			        <a href="Teachers2.html"><pre id="c6">   6°</pre></a>
 			  </div>
 			</div>  
 		  </div>
@@ -89,21 +90,21 @@
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c1">  7°</pre></a>
+			        <a href="Teachers2.html"><pre id="c1">   7°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c2">  8°</pre></a>
+			        <a href="Teachers2.html"><pre id="c2">   8°</pre></a>
 			  </div>
 			</div>  
 		  </div>
 		  <div class="small-4 large-4 columns">
 		  	<div class="row" data-equalizer>
 			  <div class="small-4 large-10 columns panel" data-equalizer-watch id="numbers">
-			        <a href="Teachers2.html"><pre id="c3">  9°</pre></a>
+			        <a href="Teachers2.html"><pre id="c3">   9°</pre></a>
 			  </div>
 			</div>  
 		  </div>
