--- a/Teachers2.html
+++ b/Teachers2.html
@@ -43,10 +43,9 @@
 			  </a></li>
 			  Do you want to search your teachers for...
 			  <br></br>
-			  <li><a href="" class="button alert">Name</a></li>
-			  <li><a href="" class="button success">Assignature</a></li>
-			  <li class="divider"></li>
-			  <li><a href="#" class="button">Rates & views</a></li>
+			   <li><a href="#" class="button">Teachers</a></li>
+			  <li><a href="#" class="button">Top rates</a></li>
+			  <li><a href="#" class="button">Top views</a></li>
 			</ul>
 		</div>
 
@@ -79,7 +78,12 @@
 					  <p><a href="#"><font size="1"></font></a></p>
 			          <div id="myModal" class="reveal-modal" data-reveal>
 			          	<h4>Edgar Jiménez - ISC</h4>
-			          	<p>Wololo</p>
+			          	<pre>															 09/04/2015</pre>
+			          	<p>Edgar Jiménez gives class in a simple way, his classe’s are easy, but the homeworks are not that easy, sometimes they are ambiguous, although, his exams are done fine, and he show his knowledge during class time. 
+			          	</p>
+			          	<pre>															 07/04/2015</pre>
+			          	<p>I like how Edgar Jiménez gives class, but the homeworks… I don’t like his homeworks, they are hard, but, with some dedication you can do them. He is really smart in his area of study, but he makes doable exams, if you are able, choose this teacher.
+			          	</p>
 			            <a class="close-reveal-modal">&#215;</a>
 			          </div>
 				    </h4>
@@ -121,7 +125,12 @@
 					  <p><a href="#"><font size="1"></font></a></p>
 			          <div id="myModal2" class="reveal-modal" data-reveal>
 			          	<h4>Julia Castellón - ISC</h4>
-			          	<p>Wololo</p>
+			          	<pre>															19/04/2015</pre>
+			          	<p>Julia Castellón is good giving explanations during class, the homeworks are easy, and the exams are about things we see on class. You can be aware that she knows the things she is talking about really well. Highly recommended teacher.
+			          	</p>
+			          	<pre>															04/04/2015</pre>
+			          	<p>She is an excellent teacher, their explanation is clear, commonly I do not have doubts, but if I have one, I go to some tutoring sessions and she explain everything with patience. There are a few difficult homework, but hey really help to learn more info about the topic. The exams are basically the most important subjects.
+			          	</p>
 			            <a class="close-reveal-modal">&#215;</a>
 			          </div>
 				    </h4>
@@ -161,7 +170,12 @@
 					  <p><a href="#"><font size="1"></font></a></p>
 			          <div id="myModal3" class="reveal-modal" data-reveal>
 			          	<h4>Pedro Ruiz - ISC</h4>
-			          	<p>Wololo</p>
+			          	<pre>															21/04/2015</pre>
+			          	<p>He is a good teacher, during his class explain every topic with patience and dedication; demonstrating their knowledge in the subject. The homework help a lot to understand and clarify doubts, but are really difficult and takes a lot of time doing it. Finally, the exams are nice because if you do your homework and pay attention in class, you won’t have any problem.
+			          	</p>
+			          	<pre>															16/04/2015</pre>
+			          	<p>I have Math III with him and I think that is not the best option because there are a lot of homework that take too much time to finish it. Their exams are challenging but not extremely difficult. I do not like too much the way of teaching, he knows really well the topics, but is really repetitive and boring. 
+			          	</p>
 			            <a class="close-reveal-modal">&#215;</a>
 			          </div>
 				    </h4>
