Mejor Logo, más materias

--- a/By Major.html
+++ b/By Major.html
@@ -76,21 +76,21 @@
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c5">LAF</pre></a>
+					        <a href="Semester.html"><pre id="c5">LLN</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c6">LAE</pre></a>
+					        <a href="Semester.html"><pre id="c6">LPO</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c1">LIN</pre></a>
+					        <a href="Semester.html"><pre id="c1">LCDE</pre></a>
 					  </div>
 					</div>  
 				  </div>
@@ -152,28 +152,28 @@
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c3">IMT</pre></a>
+					        <a href="Semester.html"><pre id="c3"> IC</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c4">ISC</pre></a>
+					        <a href="Semester.html"><pre id="c4">IDS</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c5">IBT</pre></a>
+					        <a href="Semester.html"><pre id="c5">IFI</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c6">IMA</pre></a>
+					        <a href="Semester.html"><pre id="c6">IIS</pre></a>
 					  </div>
 					</div>  
 				  </div>
