--- a/By Major.html
+++ b/By Major.html
@@ -90,14 +90,14 @@
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c1">LCDE</pre></a>
+					        <a href="Semester.html"><pre id="c1">LEM</pre></a>
 					  </div>
 					</div>  
 				  </div>
 				  <div class="small-3 large-3 columns">
 				  	<div class="row" data-equalizer>
 					  <div class="small-4 large-10 columns panel" data-equalizer-watch id="majors">
-					        <a href="Semester.html"><pre id="c2">LCPF</pre></a>
+					        <a href="Semester.html"><pre id="c2">LCDE</pre></a>
 					  </div>
 					</div>  
 				  </div>
