Mejor acomodo en sección de estrellas

--- a/Teachers.html
+++ b/Teachers.html
@@ -56,13 +56,14 @@
   				</div>
   				<div class="large-6 columns">
 				    <ul class="pricing-table" data-equalizer-watch>
-				    <p>Explanation: <img src="4star.PNG" height="40" width="80"></p> 
+				    <p></p>
+				    <p><pre id="c7">   Explanation: <img src="4star.PNG" height="40" width="80"></pre></p> 
 
-				    <p>Homeworks: <img src="3star.PNG" height="40" width="60"></p>
+				    <p><pre id="c7">   Homeworks: <img src="3star.PNG" height="40" width="60"></pre></p>
 
-				    <p>Exams: <img src="4star.PNG" height="40" width="80"></p>
+				    <p><pre id="c7">   Exams: <img src="4star.PNG" height="40" width="80"></pre></p>
 
-				    <p>Knowledge:<img src="5star.PNG" height="40" width="100"></p>
+				    <p><pre id="c7">   Knowledge:<img src="5star.PNG" height="40" width="100"></pre></p>
 				    </ul>
 			  	</div>
 			</div>
@@ -105,13 +106,14 @@
   				</div>
   				<div class="large-6 columns">
 				    <ul class="pricing-table" data-equalizer-watch>
-				    <p>Explanation: <img src="4star.PNG" height="40" width="80"></p> 
+				    <p></p>
+				    <p><pre id="c7">   Explanation: <img src="4star.PNG" height="40" width="80"></pre></p> 
 
-				    <p>Homeworks: <img src="5star.PNG" height="40" width="100"></p>
+				    <p><pre id="c7">   Homeworks: <img src="5star.PNG" height="40" width="100"></pre></p>
 
-				    <p>Exams: <img src="4star.PNG" height="40" width="80"></p>
+				    <p><pre id="c7">   Exams: <img src="4star.PNG" height="40" width="80"></pre></p>
 
-				    <p>Knowledge:<img src="5star.PNG" height="40" width="100"></p>
+				    <p><pre id="c7">   Knowledge:<img src="5star.PNG" height="40" width="100"></pre></p>
 
 				    </ul>
 			  	</div>
@@ -155,12 +157,14 @@
   				</div>
   				<div class="large-6 columns">
 				    <ul class="pricing-table" data-equalizer-watch>
-				    <p>Explanation: <img src="4star.PNG" height="40" width="80"></p> 
+				    <p></p>
+				    <p><pre id="c7">   Explanation: <img src="4star.PNG" height="40" width="80"></pre></p>
 
-				    <p>Homeworks: <img src="3star.PNG" height="40" width="60"></p>
+				    <p><pre id="c7">   Homeworks: <img src="3star.PNG" height="40" width="60"></pre></p>
 
-				    <p>Exams: <img src="4star.PNG" height="40" width="80"></p>
+				    <p><pre id="c7">   Exams: <img src="4star.PNG" height="40" width="80"></pre></p>
 
+					<p><pre id="c7">   Knowledge:<img src="4star.PNG" height="40" width="80"></pre></p>
 
 				    </ul>
 			  	</div>
