Botones teachers izquierda mejorados

--- a/Teachers.html
+++ b/Teachers.html
@@ -42,9 +42,9 @@
 			  </a></li>
 			  Do you want to search your teachers for...
 			  <br></br>
-			  <li><a href="#" class="button">Teachers</a></li>
-			  <li><a href="#" class="button">Top rates</a></li>
-			  <li><a href="#" class="button">Top views</a></li>
+			  <li><pre id="c7"><a href="#" class="button">Teachers </a></pre></li>
+			  <li><pre id="c7"><a href="#" class="button">Top rates </a></pre></li>
+			  <li><pre id="c7"><a href="#" class="button">Top views</a></pre></li>
 			</ul>
 		</div>
 
@@ -138,12 +138,7 @@
 				</div>
 
 			  	<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <label>Write your review
-					        <input type="text" placeholder="Tell us your opinion"/>
-					    </label>
-					    <a href="#" class="button postfix">Send</a>
-		    		</form>
+
 				</div>
 			</div>
 		  </div>
