--- a/Teachers2.html
+++ b/Teachers2.html
@@ -43,9 +43,9 @@
 			  </a></li>
 			  Do you want to search your teachers for...
 			  <br></br>
-			   <li><a href="#" class="button">Teachers</a></li>
-			  <li><a href="#" class="button">Top rates</a></li>
-			  <li><a href="#" class="button">Top views</a></li>
+			  <li><pre id="c7"><a href="#" class="button">Teachers </a></pre></li>
+			  <li><pre id="c7"><a href="#" class="button">Top rates </a></pre></li>
+			  <li><pre id="c7"><a href="#" class="button">Top views</a></pre></li>
 			</ul>
 		</div>
 
